# workshop-manager

./: .gitignore  .pre-commit-config.yaml  .vala-lint.conf  .valalintignore  Makefile  README.md  meson.build  vamposer.build  vamposer.json
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
data/: com.github.JanGalek.vala-application-template.desktop.in  com.github.JanGalek.vala-application-template.gresource.xml  com.github.JanGalek.vala-application-template.metainfo.xml.in  meson.build  vala-application-template.desktop.in
po/: LINGUAS  POTFILES  com.github.JanGalek.vala-application-template.pot  cs.po  en.po  meson.build
src/: .valalintignore  config.vapi  main.vala  meson.build
src/app/: Application.vala
src/dialogs/: About.vala  meson.build
src/models/: meson.build
src/models/Game/: game.vala  meson.build
src/utils/: Downloader.vala  meson.build
src/widgets/: Application.vala  Window.vala  meson.build
src/windows/: Window.vala  meson.build
src/windows/content/: BaseBox.vala  Box.vala  GameMods.vala  Games.vala  Mod.vala  meson.build
src/windows/header/: Box.vala
subprojects/: .gitignore  cache-manager.wrap  downloader-lib.wrap  finder.wrap  testcases.wrap  vala-downloader-lib.wrap  vala_testcases.wrap
subprojects/vamposer/: meson.build
tests/: base.vala  example_test.vala  main.vala  meson.build  test2.vala  test3.vala
vamposer/: meson.build
